Suffix for histogram SoftwareReporter.LogsUploadEnabled.

BUG=674226

Review-Url: https://codereview.chromium.org/2580433002
Cr-Commit-Position: refs/heads/master@{#438829}

Former-commit-id: 3d568c41bcfc92535fdca802c7caae14635411d5